# django-langchain-search-example

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: settings.py  urls.py
job/: models.py  urls.py  views.py
job/management/commands/: populate_jobs.py  populate_schools.py
job/migrations/: 0001_initial.py  0002_job_apply_link_job_company_size_choice_and_more.py  0003_alter_job_company_alter_job_location_alter_job_title.py  0004_school.py
job/templates/job/: job_list.html
